Bug 458031. Take dirty rect into account to limit box-shadow computation. r+sr=roc