layout/base/nsCSSRendering.cpp
@@ -1054,7 +1054,8 @@ void
 nsCSSRendering::PaintBoxShadow(nsPresContext* aPresContext,
                                nsIRenderingContext& aRenderingContext,
                                nsIFrame* aForFrame,
-                               const nsPoint& aForFramePt)
+                               const nsPoint& aForFramePt,
+                               const nsRect& aDirtyRect)
 {
   nsMargin      borderValues;
   PRIntn        sidesToSkip;
@@ -1076,6 +1077,8 @@ nsCSSRendering::PaintBoxShadow(nsPresContext* aPresContext,
                     twipsPerPixel, &borderRadii);
 
   gfxRect frameGfxRect = RectToGfxRect(frameRect, twipsPerPixel);
+  gfxRect dirtyGfxRect = RectToGfxRect(aDirtyRect, twipsPerPixel);
+
   for (PRUint32 i = styleBorder->mBoxShadow->Length(); i > 0; --i) {
     nsCSSShadowItem* shadowItem = styleBorder->mBoxShadow->ShadowAt(i - 1);
     gfxRect shadowRect(frameRect.x, frameRect.y, frameRect.width, frameRect.height);
@@ -1097,9 +1100,9 @@ nsCSSRendering::PaintBoxShadow(nsPresContext* aPresContext,
     nsRefPtr<gfxContext> shadowContext;
     nsContextBoxBlur blurringArea;
 
-    // shadowRect has already been converted to device pixels, pass 1 as the appunits/pixel value
+    // shadowRect is already in device pixels, pass 1 as the appunits/pixel value
     blurRadius /= twipsPerPixel;
-    shadowContext = blurringArea.Init(shadowRect, blurRadius, 1, renderContext);
+    shadowContext = blurringArea.Init(shadowRect, blurRadius, 1, renderContext, dirtyGfxRect);
     if (!shadowContext)
       continue;
 
@@ -2540,7 +2543,8 @@ GetTextDecorationRectInternal(const gfxPoint& aPt,
 gfxContext*
 nsContextBoxBlur::Init(const gfxRect& aRect, nscoord aBlurRadius,
                        PRInt32 aAppUnitsPerDevPixel,
-                       gfxContext* aDestinationCtx)
+                       gfxContext* aDestinationCtx,
+                       const gfxRect& aDirtyRect)
 {
   mDestinationCtx = aDestinationCtx;
 
@@ -2561,9 +2565,24 @@ nsContextBoxBlur::Init(const gfxRect& aRect, nscoord aBlurRadius,
     return mContext;
   }
 
+  gfxRect dirtyRect = aDirtyRect;
+  dirtyRect.ScaleInverse(aAppUnitsPerDevPixel);
+  gfxRect rectWithBlur = rect;
+  rectWithBlur.Outset(blurRadius);
+
+  // Determine the area of the shadow we need.
+  mRequiredShadowArea = dirtyRect.Intersect(rectWithBlur);
+
   mDestinationCtx = aDestinationCtx;
 
-  mContext = blur.Init(rect, gfxIntSize(blurRadius, blurRadius));
+ // XXX the temporary surface will be the mRequiredShadowArea inflated by
+ // blurRadius in each direction so that the required shadow pixels are computed
+ // correctly. We could actually use a smaller temporary surface by observing
+ // that where the temporary surface is outside the rectWithBlur, the pixel
+ // values are guaranteed to be fully transparent, so we could intersect the
+ // inflated mRequiredShadowArea with rectWithBlur to compute the temporary
+ // surface area. But we're not doing that right now because it's more complex to do.
+  mContext = blur.Init(mRequiredShadowArea, gfxIntSize(blurRadius, blurRadius));
   return mContext;
 }
 
@@ -2573,7 +2592,12 @@ nsContextBoxBlur::DoPaint()
   if (mContext == mDestinationCtx)
     return;
 
+  mDestinationCtx->Save();
+  mDestinationCtx->NewPath();
+  mDestinationCtx->Rectangle(mRequiredShadowArea);
+  mDestinationCtx->Clip();
   blur.Paint(mDestinationCtx);
+  mDestinationCtx->Restore();
 }
 
 gfxContext*
@@ -2581,3 +2605,4 @@ nsContextBoxBlur::GetContext()
 {
   return mContext;
 }
+
